--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,9 +1,11 @@
 .row {
   .AC {
-    width: 8rem;
     background-color: #ee3636;
   }
   .C {
     background-color: rgb(215, 215, 80);
+  }
+  .DEL {
+    font-size: large;
   }
 }
