--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -5,7 +5,7 @@
   .C {
     background-color: rgb(215, 215, 80);
   }
-  .DEL {
-    font-size: large;
+  .D {
+    background-color: #ff9900;
   }
 }
