--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,7 +7,7 @@
   margin-top: 10rem;
   background-color: #f0f0f0;
   padding: 20px;
-  width: 25%;
+  width: 22rem;
   height: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
